Fixed SVDW names too long

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -617,6 +617,8 @@ body {
                   line-height: 21px;
                   width: 190px;
                   overflow: hidden;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
                 }
                 dd.main-info {
                   font-size: 14px;
